<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/app_main_MainMenu_name" />
        <item
            android:id="@+id/nav_notes"
            android:title="@string/app_main_NotesMenu_name"/>
        <item
            android:id="@+id/nav_developmens"
            android:title="@string/app_main_DevelopmentsMenu_name" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/app_main_StatisticsMenu_name" />
        <item
            android:id="@+id/nav_catalog"
            android:title="@string/app_main_CatalogMenu_name" />
        <item
            android:id="@+id/nav_arhieve"
            android:title="@string/app_main_ArhieveMenu_name" />
    </group>

</menu>