<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView
        android:id="@+id/catalog_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/msg_new_contact"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/layout_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:padding="10dp"
        android:hint="@string/hint_layout_contact"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />
    <EditText
        android:id="@+id/layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_layout_descr"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />
    <EditText
        android:id="@+id/layout_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_layout_mail"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />
 <!--   <EditText
        android:id="@+id/layout_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/number_hint"
        android:background="@android:color/transparent"
        android:hint="@string/hint_layout_phone"
        android:inputType="number"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />

        -->

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/layout_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:textSize="@dimen/input_new_note"
        android:inputType="phone"
        android:typeface="monospace"
        app:allowed_chars="0123456798"
        app:mask="+7(###)#######"
        app:keep_hint="true"
        />
  <!-- <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/layout_number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:textSize="@dimen/input_new_note"
        android:inputType="phone"
        android:typeface="monospace"
        app:allowed_chars="0123456798"
        app:mask="+###-##-#######"
        app:keep_hint="true"
        /> -->

</LinearLayout>