<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactActivity"
    tools:showIn="@layout/ac_inside_contact">


    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:textSize="26sp"
        android:textColor="@color/note_list_text"
        android:text="@string/text_contact_info"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:layout_weight="1"
            android:text="@string/text_contact_phone"
            android:textColor="@color/note_list_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_phone_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:editable="false"
            android:inputType="none"
            android:textIsSelectable="true"
            android:layout_weight="2" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/stat_sys_phone_call"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:layout_weight="1"
            android:text="@string/text_contact_email"
            android:textColor="@color/note_list_text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_email_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:editable="false"
            android:inputType="none"
            android:textIsSelectable="true"
            android:layout_weight="2" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_dialog_email" />

    </LinearLayout>



</LinearLayout>
